# aria

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/aria/: __init__.py  cli.py  config.py  engine.py  gemini.py  incident.py  prompts.py  server.py
backend/aria/agents/: __init__.py  pipeline.py  runner.py
backend/aria/tools/: __init__.py  live_signals.py  mcp_tools.py  remediation.py  scenarios.py
backend/scripts/: seed_dynatrace.py  seed_phoenix.py  sse_smoke.sh
backend/tests/: test_engine.py  test_live_pipeline.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOY.md  DEVPOST.md  LIVE_MODE.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: fonts.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/config/: page.tsx
frontend/src/app/dashboard/incident/: page.tsx
frontend/src/components/: ActionCard.tsx  CountUp.tsx  EvidenceColumn.tsx  FlowField.tsx  IncidentTimeline.tsx  InstrumentSlider.tsx  OraclePanel.tsx  Panel.tsx  PhaseBar.tsx  ReasoningChain.tsx  ReportPanel.tsx  RootCausePanel.tsx  SignalCard.tsx  Sparkline.tsx  TopBar.tsx
frontend/src/components/landing/: ArchDiagram.tsx  AskAria.tsx  StoryDemo.tsx
frontend/src/components/shell/: AriaPanel.tsx  LeftRail.tsx  MobileAriaButton.tsx  PageWipe.tsx
frontend/src/lib/: api.ts  links.ts  severity.ts  store.tsx  types.ts  useTypewriter.ts
