[project]
name = "aria-agent"
version = "0.1.0"
description = "ARIA — Autonomous Reasoning & Incident Agent. Correlates Dynatrace infra signals with Arize Phoenix LLM signals via Gemini + Google ADK."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ARIA Contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
# The agentic brain. Optional so the demo runs even without GCP creds installed.
adk = [
    "google-adk>=1.0.0",
    "google-genai>=1.51.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
aria = "aria.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aria"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
